8. added Dialogs tests need think about FROM and TO
