# src/main/kotlin/ru/kolesnikov/social_net_otus/controller/DialogsManagementImpl.kt
@@ -3,6 +3,7 @@ package ru.kolesnikov.social_net_otus.controller
 import org.springframework.http.ResponseEntity
 import org.springframework.web.bind.annotation.RestController
 import ru.kolesnikov.social_net_otus.model.DialogMessage
+import ru.kolesnikov.social_net_otus.model.DialogMessageText
 import ru.kolesnikov.social_net_otus.service.DialogsManagementService
 
 @RestController
@@ -13,8 +14,8 @@ class DialogsManagementImpl(private val service: DialogsManagementService) : Dia
 
     override fun dialogUserIdSendPost(
         userId: String,
-        sendPostRequest: String
-    ): ResponseEntity<Unit> = ResponseEntity.ok(service.addDialogsByUserId(userId, sendPostRequest))
+        dialogMessageText: DialogMessageText,
+    ): ResponseEntity<Unit> = ResponseEntity.ok(service.addDialogsByUserId(userId, dialogMessageText.text))
 
 
 }
